# ChangeLog for sys-devel/gcc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.689 2009/03/16 08:03:16 vapier Exp $

  16 Mar 2009; Mike Frysinger <vapier@gentoo.org> gcc-4.3.3-r1.ebuild:
  Disable semi-broken patch for now so more people dont hit the bug #262567.

*gcc-4.3.3-r1 (15 Mar 2009)

  15 Mar 2009; Mike Frysinger <vapier@gentoo.org> +gcc-4.3.3-r1.ebuild:
  Push out accumulated fixes and new uClibc patchset.

  24 Feb 2009; Joshua Kinard <kumba@gentoo.org> gcc-4.3.2-r3.ebuild,
  gcc-4.3.3.ebuild:
  Add ~mips to gcc-4.3.2-r3 and 4.3.3

  15 Feb 2009; Mike Frysinger <vapier@gentoo.org> gcc-3.3.6-r1.ebuild:
  Use the replace-cpu-flags logic in the eclass #252698 by Le retraité.

  15 Feb 2009; Mike Frysinger <vapier@gentoo.org> gcc-3.3.6-r1.ebuild,
  gcc-3.4.6-r2.ebuild, gcc-4.0.4.ebuild:
  Add fix from upstream for open() arguments #256638 by Martin von Gagern.

  03 Feb 2009; Ryan Hill <dirtyepic@gentoo.org> Manifest:
  Fix Manifest. Bug #257538.

  03 Feb 2009; Harald van Dĳk <truedfx@gentoo.org> files/c89, files/c99:
  Aim for conformance when called as c89/c99 (#257299)

  01 Feb 2009; Mike Frysinger <vapier@gentoo.org> gcc-4.3.3.ebuild:
  Force newer glibc as people like to mix stable/unstable #257047.

  31 Jan 2009; Guy Martin <gmsoft@gentoo.org> gcc-4.2.4-r1.ebuild:
  hppa stable with Rej's blessing

*gcc-4.3.3 (27 Jan 2009)

  27 Jan 2009; Mike Frysinger <vapier@gentoo.org> +gcc-4.3.3.ebuild:
  Version bump.

*gcc-4.3.2-r3 (27 Jan 2009)

  27 Jan 2009; Mike Frysinger <vapier@gentoo.org> +gcc-4.3.2-r3.ebuild:
  Add some fixes from Debian, and fixes for PR34571, PR37489, PR37661, and
  hppa slot issue #228287.

  19 Jan 2009; Mark Loeser <halcy0n@gentoo.org> gcc-4.1.2.ebuild:
  Another patchset bump because I forgot a patch for arm

  17 Jan 2009; Mark Loeser <halcy0n@gentoo.org> gcc-4.1.2.ebuild:
  Bump patchset to fix a bug for arm

*gcc-4.2.4-r1 (15 Jan 2009)
