@@ -1,29 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>toolchain</herd>
-<maintainer restrict="the D language addon">
- <email>anant@gentoo.org</email>
-</maintainer>
-<use>
-<flag name='d'>Enable support for the D programming language</flag>
-<flag name='fixed-point'>Enable fixed-point arithmetic support for MIPS targets 
-in gcc (Warning: significantly increases compile time!)</flag>
-<flag name='ip28'>Enable building a compiler capable of building a kernel
-for SGI Indigo2 Impact R10000 (IP28)</flag>
-<flag name='ip32r10k'>Enable building a compiler capable of building an
-experimental kernel for SGI O2 w/ R1x000 CPUs (IP32)</flag>
-<flag name='libffi'>Build the portable foreign function interface library</flag>
-<flag name='mudflap'>Add support for mudflap, a pointer use checking library</flag>
-<flag name='multislot'>Allow for SLOTs to include minor version (3.3.4
-instead of just 3.3)</flag>
-<flag name='n32'>Enable n32 ABI support on mips</flag>
-<flag name='n64'>Enable n64 ABI support on mips</flag>
-<flag name='nopie'>Disable PIE support (NOT FOR GENERAL USE)</flag>
-<flag name='nossp'>Disable SSP support (NOT FOR GENERAL USE)</flag>
-<flag name='objc'>Build support for the Objective C code language</flag>
-<flag name='objc++'>Build support for the Objective C++ language</flag>
-<flag name='objc-gc'>Build support for the Objective C code language Garbage
-Collector</flag>
-</use>
+  <herd>toolchain</herd>
+  <use>
+    <flag name="d">Enable support for the D programming language</flag>
+    <flag name="fixed-point">Enable fixed-point arithmetic support for MIPS targets 
+    in gcc (Warning: significantly increases compile time!)</flag>
+    <flag name="ip28">Enable building a compiler capable of building a kernel
+    for SGI Indigo2 Impact R10000 (IP28)</flag>
+    <flag name="ip32r10k">Enable building a compiler capable of building an
+    experimental kernel for SGI O2 w/ R1x000 CPUs (IP32)</flag>
+    <flag name="libffi">Build the portable foreign function interface library</flag>
+    <flag name="mudflap">Add support for mudflap, a pointer use checking library</flag>
+    <flag name="multislot">Allow for SLOTs to include minor version (3.3.4
+    instead of just 3.3)</flag>
+    <flag name="n32">Enable n32 ABI support on mips</flag>
+    <flag name="n64">Enable n64 ABI support on mips</flag>
+    <flag name="nopie">Disable PIE support (NOT FOR GENERAL USE)</flag>
+    <flag name="nossp">Disable SSP support (NOT FOR GENERAL USE)</flag>
+    <flag name="objc">Build support for the Objective C code language</flag>
+    <flag name="objc++">Build support for the Objective C++ language</flag>
+    <flag name="objc-gc">Build support for the Objective C code language Garbage
+    Collector</flag>
+  </use>
 </pkgmetadata>
